--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -35,6 +35,7 @@ services:
             - aee_digital_trabalhos-network
         depends_on:
             - "db"
+        tty: true
 networks:
     aee_digital_trabalhos-network:
         driver: bridge
