--- a/package.json
+++ b/package.json
@@ -9,25 +9,18 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect=0.0.0.0 supervisor.js"
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "body-parser": "^1.19.0",
-    "cluster": "^0.7.7",
     "cors": "^2.8.5",
     "express": "^4.17.1",
-    "forever-monitor": "^3.0.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "mongoose": "^5.9.15",
-    "mysql": "*",
-    "nodemon": "^2.0.4",
-    "path": "^0.12.7",
-    "proc": "^0.2.2",
-    "readline": "^1.3.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4"
   }
