--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "mongoose": "^5.9.15",
+    "mongoose-deep-populate": "^3.2.0",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4"
   }
