--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,7 +14,7 @@ services:
       - aee_digital_backend
       - aee_trabalho_db
     volumes:
-      - .:/usr/app
+      - .:/app
     depends_on:
       - "mongo"
     links:
