--- a/package.json
+++ b/package.json
@@ -20,8 +20,9 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
-    "mongoose": "^5.9.15",
-    "mongoose-deep-populate": "^3.2.0",
+    "mongoose": "*",
+    "mongoose-deep-populate": "*",
+    "redis": "^4.0.3",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4"
   }
