--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -46,13 +46,14 @@ services:
   redis:
     image: redis
     command: redis-server --appendonly yes
-    hostname: redis
+    container_name: redis
     ports:
-      - "6379:6379"
+      - 6379:6379
     networks:
       - aee_digital_backend
     volumes:
       - ./data/cache:/var/lib/postgresql/data
+    restart: always
 networks:
   aee_digital_backend:
     name: aee_digital_backend
