--- a/package.json
+++ b/package.json
@@ -24,6 +24,8 @@
     "mongoose-deep-populate": "*",
     "redis": "^4.0.3",
     "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4"
+    "swagger-ui-express": "^4.1.4",
+    "winston": "^3.6.0",
+    "winston-mongodb": "^5.0.7"
   }
 }
