--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,7 +23,7 @@ services:
       - redis
     restart: always
   mongo:
-    image: mongo
+    image: mongo:5.0.10
     volumes:
       - ./data/db:/data/db
     ports:
