--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "node index.js"
+    "start": "nodemon --inspect=0.0.0.0:9229 index.js",
+    "lint": "eslint **/*.js"
   },
   "keywords": [],
   "author": "",
@@ -20,12 +21,21 @@
     "express": "^4.17.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
-    "mongoose": "^5.13.14",
+    "lodash": "^4.17.21",
+    "mongoose": "^5.13.15",
     "mongoose-deep-populate": "^3.2.0",
+    "nodemon": "^2.0.20",
     "redis": "^4.0.3",
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "winston": "^3.6.0",
     "winston-mongodb": "^5.0.7"
+  },
+  "devDependencies": {
+    "eslint": "*",
+    "eslint-config-standard": "*",
+    "eslint-plugin-import": "*",
+    "eslint-plugin-jest": "^26.6.0",
+    "jest": "^28.1.1"
   }
 }
