--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --inspect=0.0.0.0:9229 index.js",
+    "start:dev": "nodemon --inspect=0.0.0.0:9229 index.js",
+    "start": "node index.js",
     "lint": "eslint **/*.js"
   },
   "keywords": [],
