--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "body-parser": "^1.19.0",
     "cors": "^2.8.5",
     "express": "^4.17.1",
+    "express-correlation-id": "^2.0.1",
     "fs": "0.0.1-security",
     "http": "0.0.1-security",
     "lodash": "^4.17.21",
@@ -30,7 +31,7 @@
     "swagger-jsdoc": "^4.0.0",
     "swagger-ui-express": "^4.1.4",
     "winston": "^3.6.0",
-    "winston-mongodb": "^5.0.7"
+    "winston-daily-rotate-file": "^4.7.1"
   },
   "devDependencies": {
     "eslint": "*",
