--- a/package.json
+++ b/package.json
@@ -17,20 +17,16 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "body-parser": "^1.19.0",
+    "body-parser": "^1.20.0",
     "cors": "^2.8.5",
-    "express": "^4.17.1",
-    "fs": "0.0.1-security",
+    "express": "^4.18.2",
     "http": "0.0.1-security",
     "lodash": "^4.17.21",
-    "mongoose": "^5.13.15",
+    "mongodb": "^6.1.0",
+    "mongoose": "6.7.3",
     "mongoose-deep-populate": "^3.2.0",
-    "nodemon": "^2.0.20",
-    "redis": "^4.0.3",
-    "swagger-jsdoc": "^4.0.0",
-    "swagger-ui-express": "^4.1.4",
-    "winston": "^3.6.0",
-    "winston-mongodb": "^5.0.7"
+    "redis": "^4.5.0",
+    "swagger-ui-express": "^4.6.0"
   },
   "devDependencies": {
     "eslint": "*",
